welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:2: error: illegal start of simple pattern
  for (){
       ^MethodsDogHouse:16: error: illegal start of simple expression
} 
^