welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse(){
  for (){
    avance()
		avance()
		left()
		avance()
		avance()
		left()
		avance()
		avance()
		left()
		avance()
		avance()
		left()
  }
}